--- a/client/src/components/Calculator/Calculator.css
+++ b/client/src/components/Calculator/Calculator.css
@@ -9,7 +9,9 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
+    margin: auto;
+    margin-top: 15%;
 }
 
 .calculator__btns {
